--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
         "php": ">=7.1.0"
     },
     "autoload": {
-        "files": { "acf-focuspoint.php" }
+        "files": [ "acf-focuspoint.php" ]
     }
 }
